<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NarraccionActivity">

    <TextView
        android:id="@+id/Narrativa_hading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#5400A4"
        android:padding="@dimen/pading"
        android:text="@string/Narrativa"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@color/ColorBlack"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Narrativa_subheading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Narrativa_hading"
        android:layout_marginTop="-1dp"
        android:background="#7E2EC9 "
        android:padding="@dimen/pading"
        android:text="@string/Historia"

        android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Narrativa_subheading"
        >

        <TextView
            android:id="@+id/Narrativa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Article_subheading"
            android:lineSpacingExtra="5sp"
            android:padding="@dimen/pading"
            android:text="@string/Texto"></TextView>
    </ScrollView>
</RelativeLayout>